Lesson 13: typo corrections

--- a/NLP_BPE.ipynb
+++ b/NLP_BPE.ipynb
@@ -203,7 +203,7 @@
     "    - here's $\\mapsto$ here, \\', s\n",
     "    - tokenizer $\\mapsto$ token, ##izer\n",
     "\n",
-    "This encoding is referred to as Byte Piece Encoding."
+    "This encoding is referred to as *Byte Pair Encoding*."
    ]
   },
   {
@@ -254,6 +254,27 @@
     "BPE has become fairly common in modern NLP systems\n",
     "- Balances brevity of character encoding\n",
     "- With expressiveness of word encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Done\")"
    ]
   }
  ],
