--- a/NLP_GPT.ipynb
+++ b/NLP_GPT.ipynb
@@ -135,7 +135,7 @@
     "\n",
     "We introduced the family and the original model [here](NLP_Recent.ipynb#GPT:-Generalized-Pre-Training)\n",
     "\n",
-    "The second and third generation models are 10 and 1000 orders bigger (number of parameters)."
+    "The second and third generation models are 10 and 1000 times bigger (number of parameters)."
    ]
   },
   {
@@ -154,7 +154,7 @@
     "\n",
     "[Summary](https://openai.com/blog/better-language-models/)\n",
     "\n",
-    "- 48 Transformer blocks(4 times original)\n",
+    "- 48 Transformer blocks (4 times original)\n",
     "    - $n_\\text{heads} = 16 (?), d_\\text{head} = 96 (?)$\n",
     "        - $d_\\text{model} = n_\\text{heads} * d_\\text{head} = 1536$\n",
     "- 1.5 billion weights\n",
@@ -193,7 +193,7 @@
     "\n",
     "- 96 Transformer blocks(8 times original)\n",
     "    - $n_\\text{heads} = 96, d_\\text{head} = 128 (?)$\n",
-    "        - $d_\\text{model} = n_\\text{heads} * d_\\text{head} = 12,288\n",
+    "    - $d_\\text{model} = n_\\text{heads} * d_\\text{head} = 12,288$\n",
     "- 1.5 billion weights\n",
     "- Trained on\n",
     "    - 570 GB of data (100 times GPT)\n",
@@ -278,7 +278,7 @@
    "source": [
     "The GPT team tried to create a high-quality crawl by using a curated approach to links\n",
     "- Based on Reddit\n",
-    "- Only follow links originating from highly-rank (high \"karma\") Reddit pages\n",
+    "- Only follow links originating from highly-ranked (high \"karma\") Reddit pages\n",
     "\n",
     "The result is called WebText\n",
     "- 40GB; 8MM documents\n",
@@ -568,6 +568,27 @@
     "The fear is that Language Models can be used\n",
     "- to mislead\n",
     "- to create offensive speech"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Done\")"
    ]
   }
  ],
