--- a/NLP_Recent.ipynb
+++ b/NLP_Recent.ipynb
@@ -283,27 +283,6 @@
     }
    },
    "source": [
-    "<table>\n",
-    "    <tr>\n",
-    "        <th><center>Universal model: adapting task-specific inputs</center></th>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "        <td><img src=\"http://jalammar.github.io/images/bert-tasks.png\"\" width=80%></td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "        <td><center>Picture from: http://jalammar.github.io/images/bert-tasks.png\"</center></td>\n",
-    "    </tr>   \n",
-    "</table>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
     "**From a very practical standpoint**\n",
     "- In the near future (maybe even now) you will not create a new model\n",
     "- You will use an existing Language Model\n",
@@ -395,8 +374,8 @@
     "$$\n",
     "\\begin{array}[lll] \\\\\n",
     "h_0 & =  U W_e + W_p \\\\\n",
-    "h_i & =  \\text{transformer_block} ( h_i ) & \\text{for }  1 \\le i \\le n\\\\\n",
-    "\\text{prod}(U) & =  \\text{softmax}( h_n  W_e^T ) \\\\\n",
+    "h_i & =  \\text{transformer_block} ( h_{i-1} ) & \\text{for }  1 \\le i \\le n\\\\\n",
+    "\\pr{U} & =  \\text{softmax}( h_n  W_e^T ) \\\\\n",
     "\\end{array}\n",
     "$$\n",
     "where\n",
@@ -424,7 +403,7 @@
     "    - Uses word embeddings $W_e$ on the input $U$\n",
     "    - Adds *positional* encoding $W_p$  to the tokens\n",
     "- There are layers $h_i$ of Transformer blocks $1 \\le i \\le n$\n",
-    "- The output $\\text{prod}(U)$\n",
+    "- The output $\\pr{U}$\n",
     "    - Takes the final layer output $h_n$\n",
     "    - Reverses the embedding $W_e^T$  to get back to original tokens\n",
     "    - Uses a $\\text{softmax}$ to get a probability distribution over the tokens $U$ \n",
@@ -439,7 +418,7 @@
     }
    },
    "source": [
-    "The training objective is to maximize log likelihood on $\\mathcal{U}$\n",
+    "The training objective is to maximize log likelihood on $\\mathcal{U}$ (a corpus of tokens)\n",
     "\n",
     "$$\n",
     "\\begin{array}[lll] \\\\\n",
@@ -462,16 +441,16 @@
     "- 12 Transformer blocks (37 layers)\n",
     "    - $n_\\text{heads} = 12, d_\\text{head} = 64$\n",
     "        - $d_\\text{model} = n_\\text{heads} * d_\\text{head} = 768$\n",
-    "        - $d_\\text{model}$ is size of bottle-neck layer\n",
+    "        - $d_\\text{model}$ is size\n",
+    "            - representation (bottle-neck layer)\n",
+    "                - fed into Dense Feed Forward layer\n",
     "- 117 million weights\n",
     "- Trained on\n",
-    "    - 5GB of text (BooksCorpus dataset consisting of 7,000 books)\n",
+    "    - 5GB of text (BooksCorpus dataset consisting of 7,000 books: 800MM words)\n",
     "    - Sequence of 512 tokens\n",
     "    - Training time\n",
     "        - 30 days on 8 GPUs\n",
-    "        - 26 petaflop-days\n",
-    "        \n",
-    "   "
+    "        - 26 petaflop-days"
    ]
   },
   {
@@ -482,7 +461,25 @@
     }
    },
    "source": [
-    "The original Unsupervised Training to create the Language Model.\n",
+    "See Section 4.1 (\"Model specifications\") for details of training\n",
+    "- Optimizer: AdaM\n",
+    "- Learning rate decay\n",
+    "- Warmup\n",
+    "\n",
+    "We briefly introduced these concepts in earlier modules.\n",
+    "\n",
+    "Hopefully it is somewhat interesting to see them used in practice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Unsupervised Training is used to create the Language Model.\n",
     "\n",
     "This is followed by Fine Tuning on a smaller task-specific training set $\\mathcal{C}$\n",
     "\n",
@@ -494,7 +491,7 @@
     "    - maximize log likelihood on $\\mathcal{C}$\n",
     "$$\n",
     "\\begin{array}[lll] \\\\\n",
-    "\\mathcal{L}_2 ( \\mathcal{C} ) = \\sum_{(x,y)} { P( y | x_1, \\ldots, x_m } )  = \\text{softmax}(h_l^m W_y )\n",
+    "\\mathcal{L}_2 ( \\mathcal{C} ) = \\sum_{(\\x,\\y)} { \\pr{ \\y | \\x_1, \\ldots, \\x_m } }  = \\text{softmax}(h_l^m W_y )\n",
     "\\end{array}\n",
     "$$"
    ]
@@ -594,9 +591,50 @@
     }
    },
    "source": [
+    "- Trained on\n",
+    "    - BooksCorpus dataset (like GPT): 800MM words\n",
+    "    - Wikipedia (English): 2,500MM words\n",
+    "    - Training time\n",
+    "        - 4 days on 64 TPU chips\n",
+    "        \n",
+    "See Section A.2 (\"Pre-training procedure\", page 13) for details of training\n",
+    "- Optimizer: AdaM\n",
+    "- Learning rate decay\n",
+    "- Warmup\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "### BERT in action\n",
     "\n",
     "[Interactive model for MLM](https://huggingface.co/bert-base-uncased?text=Washington+is+the+%5BMASK%5D+of+the+US)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Done\")"
    ]
   }
  ],
