--- a/NLP_Word_Representations.ipynb
+++ b/NLP_Word_Representations.ipynb
@@ -134,7 +134,7 @@
     "We present the evolution of the way words are represented in NLP tasks.\n",
     "\n",
     "In the sequel, let\n",
-    "- $w$ denote a token\n",
+    "- $\\w$ denote a token\n",
     "- $\\Vocab$ denote the vocabulary"
    ]
   },
@@ -150,12 +150,12 @@
     "\n",
     "A token is encoded as a OHE vector over the vocabulary $\\Vocab$\n",
     "$$\n",
-    "\\begin{array}\n",
-    "\\text{rep}(w) = \\text{OHE}(w) * I & \\text{where } I \\text{is the identity matrix } || I || = (||\\Vocab || \\times || \\Vocab ||)\\\\\n",
+    "\\begin{array} \\\\\n",
+    "\\text{rep}(\\w) = \\text{OHE}(\\w) * I & \\text{where } I \\text{is the identity matrix } || I || = (||\\Vocab || \\times || \\Vocab ||)\\\\\n",
     "\\end{array}\n",
     "$$\n",
     "\n",
-    "- $\\text{rep}(w)$ is long ($|| \\Vocab ||$) and sparse\n",
+    "- $\\text{rep}(\\w)$ is long ($|| \\Vocab ||$) and sparse\n",
     "- does not capture relationship between tokens"
    ]
   },
@@ -172,11 +172,11 @@
     "A token is encoded as short, dense vector\n",
     "$$\n",
     "\\begin{array} \\\\\n",
-    "\\text{rep}(w) = \\text{OHE}(w) * E & \\text{where } E \\text{is the embedding matrix } || E || = (||\\Vocab || \\times n_e)\\\\\n",
+    "\\text{rep}(\\w) = \\text{OHE}(\\w) * E & \\text{where } E \\text{is the embedding matrix } || E || = (||\\Vocab || \\times n_e)\\\\\n",
     "\\end{array}\n",
     "$$\n",
     "\n",
-    "- $\\text{rep}(w)$ is short ($n_e <<|| \\Vocab ||$) and dense\n",
+    "- $\\text{rep}(\\w)$ is short ($n_e <<|| \\Vocab ||$) and dense\n",
     "- captures relationship between tokens \n",
     "    - \"meaning\"\n",
     "- *Not* context sensitive\n",
@@ -267,7 +267,7 @@
     }
    },
    "source": [
-    "The unsupervised pre-training objective is maximizes the likelihood of both models\n",
+    "The unsupervised pre-training objective  maximizes the likelihood of both models\n",
     "$$\n",
     "\\begin{array}[lll] \\\\\n",
     "\\mathcal{L}_1 ( \\mathcal{U} ) =  \n",
@@ -433,6 +433,27 @@
     "        <td><center>Picture from: https://1.bp.blogspot.com/-AVGK0ApREtk/WaiAuzddKVI/AAAAAAAAB_A/WPV5ropBU-cxrcMpqJBFHg73K9NX4vywwCLcBGAs/s1600/image2.png</center></td>\n",
     "    </tr>   \n",
     "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Done\")"
    ]
   }
  ],
