Lesson 13: typo corrections

--- a/NLP_GPT.ipynb
+++ b/NLP_GPT.ipynb
@@ -258,6 +258,27 @@
     }
    },
    "source": [
+    "## How much would it cost you to train GPT-3 ?\n",
+    "- Amazon Cloud\n",
+    "    - G5 instance\n",
+    "        - NVidia A10G Tensor Core GPUs @ 250 Tflops/GPU\n",
+    "        - 8 GPU instance (2 Pflops) @\\\\$10/hour (with yearly contract; \\\\$16\\hour on-demand)\n",
+    "            - \\\\$240 per 2Pflops-day\n",
+    "            \n",
+    "        \n",
+    "- GPT-3 $\\approx$ 3000 Pflop-days\n",
+    "    - $ 3000/2 = 1500$ days G5 instances to get 3000 Pflops-days\n",
+    "    - Cost = 1500 * \\\\$240/day = \\\\$360K"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "# WebText: a new training set\n",
     "\n",
     "One key to the success of GPT-2 (and later generations) was a newly created training set that was scraped from the Web.\n",
@@ -475,7 +496,7 @@
     "\n",
     "**Theory 2**\n",
     "\n",
-    "- The super-large training sets * contain *implicit* instances of these out of sample tasks\n",
+    "- The super-large training sets  contain *implicit* instances of these out of sample tasks\n",
     "    - For example: an English-language article quoting a French speaker in French with English translation"
    ]
   },
