Lesson 13: typo corrections

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -586,8 +586,11 @@
     "    - Functional model\n",
     "    - Layer Norm\n",
     "    - Skip connections\n",
-    "        - [Transformer](https://colab.research.google.com/github/keras-team/keras-io/blob/master/examples/nlp/ipynb/neural_machine_translation_with_transformer.ipynb)\n",
     "        - [Full architecture diagram (compare with code)](Transformer.ipynb#Full-Encoder-Decoder-Transformer-architecture)\n",
+    "        - [Transformer](https://colab.research.google.com/github/keras-team/keras-io/blob/master/examples/nlp/ipynb/neural_machine_translation_with_transformer.ipynb)\n",
+    "            - [Scaled dot-product attention](https://www.tensorflow.org/text/tutorials/transformer#scaled_dot_product_attention)\n",
+    "            - [Multi-head attention](https://www.tensorflow.org/text/tutorials/transformer#multi-head_attention)\n",
+    "       \n",
     "\n",
     "\n",
     "**Interpretation**\n",
