--- a/Adversarial_Examples.ipynb
+++ b/Adversarial_Examples.ipynb
@@ -659,7 +659,7 @@
    },
    "source": [
     "Finally, the \n",
-    "Cost function to optimize\n",
+    "Loss function to minimize\n",
     "\n",
     "$$\n",
     "\\W = \\argmin{\\W}{ - \\log( \\pr{h_g( \\y_\\text{target} ) \\; | \\;\\tilde{\\x}_\\text{source} }) + \\lambda || \\W ||^2 }\n",
