--- a/Autoencoders_and_Generative_Models.ipynb
+++ b/Autoencoders_and_Generative_Models.ipynb
@@ -860,6 +860,7 @@
    },
    "source": [
     "We will now switch to a notebook running on Google Colab\n",
+    "<!--- #include (Autoencoder_example.ipynb)) --->\n",
     " [Autoencoder example from github](https://colab.research.google.com/github/kenperry-public/ML_Fall_2021/blob/master/Autoencoder_example.ipynb)"
    ]
   },
@@ -955,11 +956,20 @@
    },
    "source": [
     "One way to conceive of achieving the goal is to condition $\\pr{X}$ on a random variable $\\z$\n",
-    "and generate and synthetic example based on the random value\n",
+    "and generate a synthetic example based on the random value\n",
     "$$\\pr{\\X | \\z}$$\n",
     "\n",
     "We will use a Neural Network with weights $\\Theta$ to compute\n",
-    "$$\\prs{\\X | \\z}{\\Theta}$$"
+    "$$\\prs{\\X | \\z}{\\Theta}$$\n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <th><center>VAE derivation: 1</center></th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img src=\"images/Autoencoder_VAE_derivation_B_0.png\" width=80%></td>\n",
+    "    </tr>\n",
+    "</table>"
    ]
   },
   {
@@ -1002,7 +1012,7 @@
     "we marginalize $\\x$ over $\\z$\n",
     "\n",
     "$$\n",
-    "\\pr{\\x} = \\int_{\\z \\in Q}{ \\pr{\\x | \\z} \\; \\pr{z} }\n",
+    "\\pr{\\x} = \\int_{\\z \\in Q}{ \\pr{\\x | \\z} \\; \\pr{\\z} }\n",
     "$$\n",
     "\n",
     "where random $\\z$ comes from (as of yet unknown) distribution $Q$.\n",
@@ -1023,10 +1033,10 @@
    },
    "source": [
     "Some obvious concerns\n",
-    "- It may be very expensive to draw many samples from $\\z$ for each training $\\x$\n",
-    "- Moreover: It is likely that that there are many random choices from $\\z$\n",
+    "- It may be very expensive to draw many samples from $Q$ for each training $\\x$\n",
+    "- Moreover: It is likely that that there are many random choices from $Q$\n",
     "    - for which the generated $\\prs{\\x | \\z}{\\Theta}$\n",
-    "    - is *unlike* and example in $\\X$\n"
+    "    - is *unlike* any example in $\\X$\n"
    ]
   },
   {
@@ -1076,11 +1086,11 @@
     "The solution is *approximate* the intractable $\\pr{\\z | \\x}$ with a tractable\n",
     "$\\qrs{\\z | \\x}{\\Phi}$\n",
     "- That is computed by a Neural Network (the \"Encoder\")\n",
-    "- That is parameterized by $\\Phi$\n",
+    "- We will learn this distribution (parameterized by $\\Phi$) by training on $ \\X$.\n",
     "\n",
-    "We use KL divergence as a measure of the difference between two distributions.\n",
+    "We need this approximate distribution $\\qrs{\\z | \\x}{\\Phi}$ to be as close to the true distribution $\\pr{\\z | \\x}$ as possible.\n",
     "\n",
-    "So we want to minimize\n",
+    "That is: Using KL divergence as a measure of the difference between two distributions, we want to minimize\n",
     "\n",
     "$$\n",
     "\\KL( \\qrs{\\z | \\x}{\\Phi} \\; ||\\; \\pr{\\z | \\x})\n",
@@ -1113,9 +1123,12 @@
     }
    },
    "source": [
-    "Note that the Encoder in the VAE arises out of necessity\n",
-    "- the need to compute $\\pr{\\z | \\x }$\n",
-    "- rather than a priori design considerations"
+    "Note that prior to the need to approximate $\\pr{\\z | \\x }$, there was only a Decoder in our formulation of a goal of producing $\\hat{\\X}$ similar to true $\\X$!\n",
+    "\n",
+    "The Encoder (i.e., the Neural Network producing $\\qrs{\\z | \\x}{\\Phi}$) arose\n",
+    "\n",
+    "- Out of the need to compute $\\pr{\\z | \\x }$\n",
+    "- Rather than a priori design considerations"
    ]
   },
   {
@@ -1154,21 +1167,6 @@
     }
    },
    "source": [
-    "That is, our  new loss $\\loss$ function has two components\n",
-    "- $\\loss_R$\n",
-    "    - the reconstruction loss, as before\n",
-    "- $\\loss_D$\n",
-    "    - the \"KL divergence\" loss which constrains the approximate $q_\\phi(\\z|\\x)$ "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
     "We will show (in the next section: lots of algebra !) that the loss can be re-written as\n",
     "$$\n",
     "\\loss = - \\E_{z \\sim \\qrs{\\z|\\x}{\\Phi}}\\left( \\log( \\prs{\\x|\\z}{\\Theta} ) \\right) + \\KL(\\qrs{\\z|\\x}{\\Phi}  \\; ||\\;  \\pr{\\z} )\n",
@@ -1189,7 +1187,7 @@
     "$$\n",
     "\n",
     "**The purpose of re-writing**: replace intractable $\\pr{\\z|\\x}$ with a tractable $\\pr{\\z}$ !\n",
-    "- So we can an Loss function with which we can train !"
+    "- So we can have a Loss function with which we can train !"
    ]
   },
   {
@@ -1299,11 +1297,13 @@
     "\\end{array}\n",
     "$$\n",
     "\n",
-    "That is \n",
-    "- $\\z$ has been made  a function of (trainable parameters) $\\mu_\\Theta, \\sigma_\\Theta$\n",
-    "- the random variable $\\epsilon$ appears in a product term\n",
-    "    - we can differentiate the product with respect to $\\Theta$\n",
-    "    - $\\epsilon$ can be treated as a constant in $\\frac{\\partial \\epsilon}{\\partial \\Theta}$\n"
+    "In this formulation, the random variable $\\epsilon$ appears in a product term\n",
+    "- We can differentiate the product with respect to $\\Theta$\n",
+    "- $\\epsilon$ can be treated as a constant in $\\frac{\\partial \\epsilon}{\\partial \\Theta}$\n",
+    "\n",
+    "The Encoder design is now to produce\n",
+    "(trainable parameters) $\\mu_\\Theta, \\sigma_\\Theta$\n",
+    "- And $\\z$ indirectly\n"
    ]
   },
   {
@@ -1453,7 +1453,7 @@
     "width": "370.594px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
