--- a/Index.ipynb
+++ b/Index.ipynb
@@ -551,12 +551,11 @@
     "\n",
     "The Transformer architecture is a key contributor.\n",
     "\n",
-    "\n",
     "We revisit Autoencoders in depth, with a particular emphasis on using them for Generative Machine Learning.\n",
-    "\n",
-    "Although we have spent the semester with the simpler Sequential model of Keras, it's time to give a peek at the Functional model.  \n",
-    "\n",
-    "We also illustrate some more advanced Keras coding methods.\n",
+    "We will also study the Variational Autoencoder, which has a complex Loss function.\n",
+    "Both of these are motivated by the desire to\n",
+    "- Show how Machine Learning can be used in a Generative (rather than Discriminative) mode\n",
+    "- Demonstrate advanced Keras coding techniques.\n",
     "\n",
     "**Evolution of Word representations**\n",
     "- [How to represent a word: syntax](NLP_BPE.ipynb)\n",
@@ -570,27 +569,10 @@
     "\n",
     "**Generative ML: Variational Autoencoders**\n",
     "- [Variational Autoencoders](Autoencoders_and_Generative_Models.ipynb)\n",
-    "    <!--- #include (Autoencoder_example.ipynb) --->\n",
-    "    - [Autoencoder from github](https://colab.research.google.com/github/kenperry-public/ML_Fall_2021/blob/master/Autoencoder_example.ipynb) (**Colab**)\n",
-    "    - [Autoencoder from github](Autoencoder_example.ipynb) (**local machine**)\n",
     "\n",
     "\n",
     "**Advanced Keras**\n",
-    "- Variational Autoencoder\n",
-    "    - Functional model\n",
-    "    - Custom layers\n",
-    "    - Custom training loop\n",
-    "        - [Keras VAE: home](https://keras.io/examples/generative/vae/)\n",
-    "        - [Keras VAE: notebook](https://colab.research.google.com/github/keras-team/keras-io/blob/master/examples/generative/ipynb/vae.ipynb#scrollTo=DEU05Oe0vJrY)\n",
-    "- Transformer\n",
-    "    - Functional model\n",
-    "    - Layer Norm\n",
-    "    - Skip connections\n",
-    "        - [Full architecture diagram (compare with code)](Transformer.ipynb#Full-Encoder-Decoder-Transformer-architecture)\n",
-    "        - [Transformer](https://colab.research.google.com/github/keras-team/keras-io/blob/master/examples/nlp/ipynb/neural_machine_translation_with_transformer.ipynb)\n",
-    "            - [Scaled dot-product attention](https://www.tensorflow.org/text/tutorials/transformer#scaled_dot_product_attention)\n",
-    "            - [Multi-head attention](https://www.tensorflow.org/text/tutorials/transformer#multi-head_attention)\n",
-    "       \n",
+    "- [Custom: Loss, Models, Layers](Keras_Advanced.ipynb)\n",
     "\n",
     "\n",
     "**Interpretation**\n",
@@ -609,6 +591,32 @@
    },
    "source": [
     "# Week 7 Advanced Topics\n",
+    "\n",
+    "**Plan**\n",
+    "\n",
+    "We briefly studied Autoencoders last week, emphasizing their ability to \"generate\" new examples.\n",
+    "\n",
+    "It turns out that we can't implement Autoencoders using the Sequential model of Keras that we have been\n",
+    "using all semester:\n",
+    "it's time to give a peek at \n",
+    "the Functional model.\n",
+    "\n",
+    "In particular, the Variational Autoencoder has a Loss function that is somewhat complex.  \n",
+    "\n",
+    "As we've hinted at before: the art of Deep Learning is writing a Loss function that captures the semantics of the problem you want to solve.  We look at more advanced Keras techniques that allow us to write complex Loss functions.\n",
+    "  \n",
+    "\n",
+    "We've spent several weeks learning about Neural Networks.\n",
+    "At best, we suggested theories for how they are able to achieve what they do.\n",
+    "\n",
+    "This week: we will explore methods for testing theories as to how Neural Networks work.\n",
+    "\n",
+    "**Continued from last week**\n",
+    "- **Generative ML: Variational Autoencoders**\n",
+    "    - [Variational Autoencoders](Autoencoders_and_Generative_Models.ipynb)\n",
+    "\n",
+    "- **Advanced Keras**\n",
+    "    - [Custom: Loss, Models, Layers](Keras_Advanced.ipynb)\n",
     "\n",
     "**What is a Neural Network really doing ? Interpretation**\n",
     "- [Introduction to Interpretation of Deep Learning](Intro_to_Interpretation_of_DL.ipynb)\n",
