--- a/Interpretation_of_DL_Deconv.ipynb
+++ b/Interpretation_of_DL_Deconv.ipynb
@@ -380,7 +380,7 @@
    },
    "source": [
     "- Let $\\idxspatial$ denote the spatial indices of a single location \n",
-    "    - Length of $\\idxspatial$ depends on shape of date: one-dimensional, two-dimensional\n",
+    "    - Length of $\\idxspatial$ depends on shape of data: one-dimensional, two-dimensional\n",
     "- Let\n",
     "$$\n",
     "\\y_{\\llp, \\idxspatial, k}\n",
@@ -421,7 +421,7 @@
     "\\end{array}\n",
     "$$\n",
     "\n",
-    "(Note that $k, k'$ are really not necessary, as we explained due to the mechanics of convolution)"
+    "(Note that $k, k'$ are really not necessary since the spatial locations are shared across all channels during convolution)"
    ]
   },
   {
@@ -470,6 +470,8 @@
    "source": [
     "For a *single spatial location* $\\idxspatial$ of example $i$\n",
     "- We can arrange the sensitivities of the feature at location $\\idxspatial$ of map $k$ of layer $\\ll$ in a grid\n",
+    "    - With the same dimensions as layer $0$\n",
+    "        - i.e., plotting $\\mathcal{s}^\\ip_{\\llp, \\idxspatial, k, (0), \\idxspatial', k'}$ versus each $\\idxspatial'$ in  layer $0$\n",
     "- Called a *Saliency Map*\n",
     "- Which has the same spatial dimensions as the Receptive Field $\\mathcal{R}_{\\llp, \\idxspatial}$\n",
     "- And the same number of features/channels as layer $0$: $n_{(0)}$"
