--- a/Interpretation_of_DL_Gradient_Ascent.ipynb
+++ b/Interpretation_of_DL_Gradient_Ascent.ipynb
@@ -268,10 +268,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "That is:\n",
-    "- We can use Gradient Descent\n",
+    "- We can use Gradient Ascent (rather than Descent, as we are maximizing rather than minimizing the objective)\n",
     "- To find the value $\\x^* = \\y_{(0)}$\n",
     "- That, when used as input to the Neural Network\n",
     "- Maximizes the value of a particular neuron $\\y_{\\llp, \\idxspatial, k}$\n",
