--- a/Interpretation_of_DL_Simple.ipynb
+++ b/Interpretation_of_DL_Simple.ipynb
@@ -532,6 +532,7 @@
     "\n",
     "Rather than examining all locations, we\n",
     " we can *summarize* whether the feature exists *anywhere* in example $i$.\n",
+    "- i.e, we attempt to interpret what feature map $k$ is recognizing in general, rather than at specific location $\\idxspatial$\n",
     "\n",
     "For example, using \"max\" for summarization\n",
     "- We can identify the *value* $\\summaxact^\\ip_{\\llp,k}$ of the strongest activation\n",
@@ -550,7 +551,7 @@
     }
    },
    "source": [
-    "By sorting examples (i.e., varying example index $i$) on $\\summaxact^\\ip_{\\llp,k}$\n",
+    "By sorting examples on $\\summaxact^\\ip_{\\llp,k}$\n",
     "- We identify a cluster of examples\n",
     "- That are most identified with the feature\n",
     "\n",
