Lesson 14: typo corrections

--- a/Autoencoders_and_Generative_Models.ipynb
+++ b/Autoencoders_and_Generative_Models.ipynb
@@ -681,7 +681,7 @@
    "source": [
     "**Generative**\n",
     "- sample $\\hat{\\z} \\sim \\hat{p}(\\z)$\n",
-    "- use decoder to produce output $p_\\theta (\\x|\\z)$\n",
+    "- use Decoder to produce output $p_\\theta (\\x|\\z)$\n",
     " \n",
     "This means we can feed in a $\\z$ \n",
     "- that doesn't correspond to any training example\n",
@@ -955,7 +955,7 @@
     }
    },
    "source": [
-    "One way to conceive of achieving the goal is to condition $\\pr{X}$ on a random variable $\\z$\n",
+    "One way to conceive of achieving the goal is to condition $\\pr{\\X}$ on a random variable $\\z$\n",
     "and generate a synthetic example based on the random value\n",
     "$$\\pr{\\X | \\z}$$\n",
     "\n",
@@ -1224,6 +1224,16 @@
     }
    },
    "source": [
+    "**The key step**:\n",
+    "- Using Bayes Theorem to re-write\n",
+    "$$\\log(\\qrs{\\z|\\x}{\\Phi} $$\n",
+    "as\n",
+    "$$\n",
+    "\\log( \\pr{\\x | \\z}) + \\log(\\pr{\\z}) - \\log(\\pr{\\x} )\n",
+    "$$\n",
+    "- This allows us do away with intractable conditional probability $\\qrs{\\z|\\x}{\\Phi}$\n",
+    "- In favor of unconditional probability $\\pr{\\z}$\n",
+    "\n",
     "The LHS cannot be optimized via SGD (recall the tractability issue with  $\\pr{\\z|\\x}$).\n",
     "\n",
     "**But the RHS can be made tractable** giving a tractable choice of $\\pr{\\z}$.\n",
@@ -1262,7 +1272,7 @@
     "\n",
     "There is still one impediment to training.\n",
     "\n",
-    "It involves the random choice of $z \\sim \\qrs{\\z|\\x}{\\Phi}$ in\n",
+    "It involves the random choice of $\\z \\sim \\qrs{\\z|\\x}{\\Phi}$ in\n",
     "\n",
     "$$\n",
     "\\loss_R = \\E_{z \\sim \\qrs{\\z|\\x}{\\Phi} } \\left( \\log( \\prs{\\x | \\z}{\\Theta} ) \\right)\n",
