--- a/Index.ipynb
+++ b/Index.ipynb
@@ -613,7 +613,7 @@
     "\n",
     "**Continued from last week**\n",
     "- **Generative ML: Variational Autoencoders**\n",
-    "    - [Variational Autoencoders](Autoencoders_and_Generative_Models.ipynb)\n",
+    "    - [Variational Autoencoders](Autoencoders_and_Generative_Models.ipynb#Variational-Autoencoder-(VAE):-Generative-ML)\n",
     "\n",
     "- **Advanced Keras**\n",
     "    - [Custom: Loss, Models, Layers](Keras_Advanced.ipynb)\n",
