Keras Advanced: more info on training loop, train_step

--- a/Keras_Advanced.ipynb
+++ b/Keras_Advanced.ipynb
@@ -150,7 +150,7 @@
     "Up until now\n",
     "- We have been  using pre-defined Loss functions (e.g., `binary_crossentropy`)\n",
     "- Specifying the Loss function in the compile statement\n",
-    ">`model.compile(loss='binary_crossentropy'`\n",
+    ">`model.compile(loss='binary_crossentropy')`\n",
     "- Using the built-in \"training loop\" (cycling through epochs, using Gradient Descent to update weights)\n",
     "    - `model.fit( ... )`"
    ]
@@ -179,12 +179,28 @@
    "source": [
     "But what if your Loss function needs access to values that are not part of the signature ?\n",
     "\n",
-    "In that case, you might need to write your own training loop\n",
+    "In that case, you might need to [write your own training loop](https://keras.io/guides/writing_a_training_loop_from_scratch/)\n",
     "- Cycle through epochs\n",
     "- Within each epoch, cycle through mini-batches of examples\n",
     "- For each mini-batch of examples: compute the custom loss\n",
     "- Compute the gradient of the loss with respect to the weights\n",
     "- Update the weights\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Rather than writing the entire training loop, it sometimes suffices to just write the [train step](https://keras.io/guides/customizing_what_happens_in_fit/)\n",
+    "- The \"body\" of the doubly-nested loop (for each epoch, for each mini-batch)\n",
+    "- The part that\n",
+    "    - Computes the Loss\n",
+    "    - Computes gradients\n",
+    "    - Updates the weights"
    ]
   },
   {
